--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,32 @@
 /node_modules
 npm-debug.log
 yarn-error.log
+package-lock.json
+
+# Angular build artifacts
+dist/
+out-tsc/
+coverage/
+
+# IDE and Editor settings
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Cache and temporary files
+/.angular/cache
+/.angular/local
+
+# Logs and temporary files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # IDEs and editors
 .idea/
